# sonic-mix-wizard

./: .env  README.md  index.html  tailwind.config.ts
.github/workflows/: build-desktop.yml
desktop/: README.md  package.json  setup.command  setup.sh  sync.sh  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: downloader.rs  main.rs  sonic_pi.rs  tunepat_watcher.rs  updater.rs
desktop/src/lib/: tauri.ts
scripts/local_downloader/: .env.example  README.md  SonicMix.applescript  SonicMix_Downloader.command  SonicMix_Setup.command  TunePat_Setup.command  install.sh  install_macos.command  install_tunepat.sh  requirements.txt  server.py  tunepat_watcher.py
src/: App.tsx  index.css
src/components/dj/: AIPromptInput.tsx  AudioVisualizer.tsx  AutoMixControl.tsx  Deck.tsx  DesktopStatusBar.tsx  DownloadProgress.tsx  DownloaderSetupBanner.tsx  Header.tsx  LocalDownloaderSettings.tsx  MashupBuilder.tsx  Mixer.tsx  PlatformConnector.tsx  RekordboxWaveform.tsx  SonicPiControls.tsx  SonicPiGenerator.tsx  SpotifyBrowser.tsx  TrackBrowser.tsx  TrackQueue.tsx  (+4 more)
src/contexts/: SettingsContext.tsx  TrackDownloaderContext.tsx
src/hooks/: useAppUpdater.ts  useAudioPlayer.ts  useAutoMix.ts  useMixer.ts  useSonicPi.ts  useSpotify.ts  useTrackDownloader.ts  useTunePat.ts
src/lib/: platform.ts  waveformGenerator.ts
src/pages/: Desktop.tsx  Index.tsx  Settings.tsx
src/types/: dj.ts
supabase/: config.toml
supabase/migrations/: 20251202220053_cd8b3b6f-a7c0-4e13-b9a1-20c80aaf1d99.sql  20251203020732_913d8e24-2b28-4479-b059-67f615acca62.sql
(+6 files in other folders)
